[package]
name = "rhizomedb-macro"
version = "0.1.0"
description = "RhizomeDB macros"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"
